add community router

--- a/bluebell_backend/.air.conf
+++ b/bluebell_backend/.air.conf
@@ -1,4 +1,4 @@
-# [Air](https://github.com/cosmtrek/air) TOML 格式的配置文件
+# [Air](https://github.com/air-verse/air) TOML 格式的配置文件
 
 # 工作目录
 # 使用 . 或绝对路径，请注意 `tmp_dir` 目录必须在 `root` 目录下
@@ -44,3 +44,4 @@ runner = "green"
 [misc]
 # 退出时删除tmp目录
 clean_on_exit = true
+# air 在windows用比较复杂，建议linux/macos
