--- a/bluebell_backend/config/config.yaml
+++ b/bluebell_backend/config/config.yaml
@@ -5,6 +5,9 @@ version: "v0.0.1"
 machine_id: 1
 start_time: "2020-01-01"
 
+auth:
+  jwt_expire: 8760
+
 log:
   level: "debug"
   filename: "./log/bluebell.log"
