write Dockerfile and docker-compose.yaml

--- a/bluebell_backend/config/config.yaml
+++ b/bluebell_backend/config/config.yaml
@@ -1,6 +1,6 @@
 name: "bluebell"
 mode: "dev"
-port: 8080
+port: 8081
 version: "v0.0.1"
 machine_id: 1
 start_time: "2020-01-01"
@@ -16,7 +16,7 @@ log:
   max_backups: 7
 
 mysql:
-  host: 127.0.0.1
+  host: mysql8019        # ← 必须使用 compose 服务名
   port: 3306
   user: root
   password: 123456
@@ -25,7 +25,7 @@ mysql:
   max_open_conns: 200
 
 redis:
-  host: 127.0.0.1
+  host: redis507       # ← 必须使用 compose 服务名
   port: 6379
   password: ""
   db: 0
